k8s/deployment-definition.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tanzu-oyo-deployment
  namespace: default
  labels:
    app: tanzu-oyo
    type: front-end

spec:
  replicas: 3
  selector:
    matchLabels:
      app: tanzu-oyo
      type: front-end
  template:
    metadata:
      name: tanzu-oyo-pod
      labels:
        app: tanzu-oyo
        type: front-end
    spec:
      containers:
      - name: tanzu-oyo-container
        image: 192.168.20.3/ns1/tanzu-oyo:latest
        ports:
        - containerPort: 8080
          protocol: TCP
      imagePullSecrets:
      - name: ns1-default-image-pull-secret
