k8s/pod-definition.yml
apiVersion: v1
kind: Pod

metadata:
  name: tanzu-oyo-static-pod
  namespace: default
  labels:
    app: tanzu-oyo
    type: front-end

spec:
  containers:
  - name: tanzu-oyo-container
#    image: 192.168.20.3/ns1/tanzu-oyo:latest
    image: gcr.io/fe-dbeauregard/tanzu-oyo:latest
    ports:
    - name: web-port
      containerPort: 8080
      protocol: TCP
#  imagePullSecrets:
#  - name: ns1-default-image-pull-secret
