k8s/service-definition.yml
apiVersion: v1
kind: Service
metadata:
  name: tanzu-oyo-service
  namespace: default
  labels:
    app: tanzu-oyo
    type: front-end
spec:
  # ClusterIP, NodePort, LoadBalancer, ExternalName
  type: LoadBalancer
  ports:
  - port: 88
    targetPort: 8080
    protocol: TCP
    nodePort: 30007
  selector:
    app: tanzu-oyo
    type: front-end
