k8s/ingress-definition.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tanzu-oyo-ingress
  namespace: default
  labels:
    app: tanzu-oyo
    type: front-end
spec:
  rules:
    - host: "oyo.tkg.homelab.com"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: tanzu-oyo-service
              port:
                number: 88
